Fix: Compiling errors / syntax for sas

--- a/sass/scss/_vars.scss
+++ b/sass/scss/_vars.scss
@@ -1,8 +1,8 @@
-/* Vars */
-:root {
-  --bodyMargin: 0;
-  --bezzelHeight: 24px;
-  --backgroundColor: #D8D6D8;
-  --bezzelColor: #DEDCDE;
-
-}
+$bodyMargin: 0;
+$bezzelHeight: 1.3em;
+$bezzelBgColor: #DDDBDD;
+$editorBgColor: #282C34;
+$navTabFontColor: #D7DAE0;
+$navTabBgColor: #21252B;
+$asideNumColor: #4B5364;
+$editorActiveLn: #2C323C;
