--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -1,35 +1,25 @@
-@import "_vars.scss";
-
 html {
-  margin: 10px;
-
-}
+  margin: 10px; }
 
 body {
-  margin: $bodyMargin;
-  font-size: 20px;
-
-}
+  margin: 0;
+  font-size: 20px; }
 
 .bezzel {
-  background-color: $bezzelBgColor;
+  background-color: #DDDBDD;
   border-radius: 10px 10px 0px 0px;
   text-align: center;
   padding-top: 3px;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
-
-}
+  align-items: center; }
 
 .bezzel span,
 .bezzel div {
-  margin-right: 4px;
-}
+  margin-right: 4px; }
 
 .bezzel > span {
-  margin-left: 40%;
-}
+  margin-left: 40%; }
 
 .close {
   background-color: #FC635D;
@@ -38,9 +28,7 @@ body {
   border-radius: 100px;
   display: inline-block;
   margin: 0;
-  margin-left: 12px;
-
-}
+  margin-left: 12px; }
 
 .mini {
   background-color: #FDBC40;
@@ -48,9 +36,7 @@ body {
   width: .7em;
   border-radius: 100px;
   display: inline-block;
-  margin: 0;
-
-}
+  margin: 0; }
 
 .full {
   background-color: #34C84A;
@@ -58,66 +44,48 @@ body {
   width: .7em;
   border-radius: 100px;
   display: inline-block;
-  margin: 0;
-
-}
+  margin: 0; }
 
 .nav-tab {
   height: 1.5em;
-  background-color: $navTabBgColor;
-
-}
+  background-color: #21252B; }
 
 .nav-tab div {
-  color: $navTabFontColor;
-  background-color: $editorBgColor;
+  color: #D7DAE0;
+  background-color: #282C34;
   height: 100%;
   width: 25%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 75%;
-
-}
+  font-size: 75%; }
 
 .editor {
-  background-color: $editorBgColor;
-}
+  background-color: #282C34; }
 
 .editor aside {
   display: flex;
   flex-direction: column;
-  color: $asideNumColor;
-  padding: 0 1em;
-
-}
+  color: #4B5364;
+  padding: 0 1em; }
 
 aside span > span {
-  background-color: $editorActiveLn;
+  background-color: #2C323C;
   height: 1.5em;
   width: 90%;
   display: inline-block;
-  margin: 0 1em;
-
-}
+  margin: 0 1em; }
 
 @keyframes blinker {
-
-    0% {
-      opacity: 0;
-    }
-
-    100% {
-      opacity: 1;
-    }
-
-}
-
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 .editor-blinker div {
   font-size: 1.5em;
   color: #528BFF;
   animation-name: blinker;
   animation-iteration-count: infinite;
-  animation-duration: .9s;
+  animation-duration: .9s; }
 
-}
+/*# sourceMappingURL=main.css.map */
