--- a/sass/scss/partials/_base.scss
+++ b/sass/scss/partials/_base.scss
@@ -1,10 +1,12 @@
+@import "../vars/_vars.scss";
+
 html {
-  margin: 10px;
+  margin: $htmlMargin;
 
 }
 
 body {
   margin: $bodyMargin;
-  font-size: 20px;
+  font-size: $baseFontSize;
 
 }
