Refactor: Separate concerns by adding layout directory

--- a/sass/scss/vars/_vars.scss
+++ b/sass/scss/vars/_vars.scss
@@ -1,4 +1,21 @@
+/**************************/
+/*** Base ***/
+/**************************/
+
+/* Dimension */
 $bodyMargin: 0;
+$htmlMargin: 10px;
+
+/* Font */
+$baseFontSize: 20px;
+
+
+/**************************/
+/*** Bezzel ***/
+/**************************/
+
+$bezzelHeight: 1.3em;
+
 $bezzelHeight: 1.3em;
 $bezzelBgColor: #DDDBDD;
 $editorBgColor: #282C34;
