--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -1,59 +1,91 @@
-/*
-Error: File to import not found or unreadable: _vars.scss.
-       Load path: /Users/jhurtado/code/shortcut_heaven/sass/scss
-        on line 1 of scss/main.scss
+/**************************/
+/*** Base ***/
+/**************************/
+/* Color */
+/* Dimension */
+/* Font */
+/**************************/
+/*** Bezzel ***/
+/**************************/
+* {
+  /* Dimensions */
+  margin: 0;
+  padding: 0;
+  outline: none; }
 
-1: @import "_vars.scss";
-2: 
-3: .bezzel span,
-4: .bezzel div {
-5:   margin-right: 4px;
-6: }
+html {
+  font-size: 20px; }
 
-Backtrace:
-scss/main.scss:1
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:45:in `import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:314:in `visit_import'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:135:in `with_frame'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:162:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:161:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/visitors/perform.rb:10:in `visit'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-/Library/Ruby/Gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:320:in `block in watch'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: _vars.scss.\A        Load path: /Users/jhurtado/code/shortcut_heaven/sass/scss\A         on line 1 of scss/main.scss\A \A 1: @import \"_vars.scss\";\A 2: \A 3: .bezzel span,\A 4: .bezzel div {\A 5:   margin-right: 4px;\A 6: }"; }
+body {
+  /* Font */
+  font-family: sans-serif;
+  font-weight: normal;
+  /* Color */
+  /* Dimensions */ }
+
+.btn--primary {
+  background-color: #FC635D; }
+
+.btn--secondary {
+  background-color: #FC635D; }
+
+.btn--caution {
+  background-color: #FC635D; }
+
+.bezel {
+  background-color: #DDDBDD;
+  border-radius: 10px 10px 0px 0px;
+  text-align: center;
+  padding-top: 3px; }
+
+.btn--bezel {
+  height: .7em;
+  width: .7em;
+  border-radius: 100px;
+  display: inline-block;
+  margin: 0;
+  margin-left: 12px; }
+
+.nav-tab {
+  height: 1.5em;
+  background-color: #21252B; }
+
+.nav-tab div {
+  color: #D7DAE0;
+  background-color: #282C34;
+  height: 100%;
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 75%; }
+
+.editor {
+  background-color: #282C34; }
+
+.editor aside {
+  display: flex;
+  flex-direction: column;
+  color: #4B5364;
+  padding: 0 1em; }
+
+aside span > span {
+  background-color: #2C323C;
+  height: 1.5em;
+  width: 90%;
+  display: inline-block;
+  margin: 0 1em; }
+
+@keyframes blinker {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+.editor-blinker div {
+  font-size: 1.5em;
+  color: #528BFF;
+  animation-name: blinker;
+  animation-iteration-count: infinite;
+  animation-duration: .9s; }
+
+/*# sourceMappingURL=main.css.map */
