Add bezel styling

--- a/sass/scss/components/_bezel.scss
+++ b/sass/scss/components/_bezel.scss
@@ -6,14 +6,14 @@
 
 }
 
-// .bezel span,
-// .bezel div {
-//   margin-right: 4px;
-// }
+.bezel span,
+.bezel div {
+  margin-right: 4px;
+}
 
-// .bezel > span {
-//   margin-left: 40%;
-// }
+.bezel > span {
+  margin-left: 40%;
+}
 
 .btn--bezel {
   height: .7em;
