--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -38,6 +38,13 @@ body {
   text-align: center;
   padding-top: 3px; }
 
+.bezel span,
+.bezel div {
+  margin-right: 4px; }
+
+.bezel > span {
+  margin-left: 40%; }
+
 .btn--bezel {
   height: .7em;
   width: .7em;
