--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -36,9 +36,7 @@ body {
   background-color: #DDDBDD;
   border-radius: 10px 10px 0px 0px;
   text-align: center;
-  padding-top: 3px;
-  margin: 50px;
-  color: black; }
+  padding-top: 3px; }
 
 .nav-tab {
   height: 1.5em;
