--- a/sass/scss/base/_base.scss
+++ b/sass/scss/base/_base.scss
@@ -1,7 +1,7 @@
 * {
   /* Dimensions */
-  margin: 0;
-  padding: 0;
+  margin: $marginBaseBody;
+  padding: $paddingBaseBody;
   outline: none;
 
 }
