--- a/sass/scss/layout/_layout.scss
+++ b/sass/scss/layout/_layout.scss
@@ -2,4 +2,12 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+
+}
+
+.bezel__title {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+
 }
