Feat: Add styling to nav

--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -45,6 +45,16 @@ body {
   padding: 3px;
   margin: 1.5rem 1.5rem 0px 1.5rem; }
 
+.nav {
+  margin: 0 1.5rem;
+  background-color: #21252B;
+  color: #fff; }
+
+.nav__tab {
+  background-color: #282C34;
+  width: 25%;
+  text-align: center; }
+
 .bezel {
   display: flex;
   justify-content: flex-start;
