--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -2,6 +2,7 @@
 @import "./base/_base.scss";
 @import "./components/_btns.scss";
 @import "./components/_bezel.scss";
+@import "./components/_nav.scss";
 @import "./layout/_layout.scss";
 
 // .nav-tab {
