--- a/sass/scss/vars/_vars.scss
+++ b/sass/scss/vars/_vars.scss
@@ -6,6 +6,8 @@
 $colorPrimary: #34C84A;
 $colorSecondary: #FDBC40;
 $colorCaution: #FC635D;
+$colorEditorBg: #21252B;
+$colorEditorTabBg: #282C34;
 
 /* Dimension */
 $marginBaseBody: 0;
@@ -26,8 +28,6 @@ $bezelHeight: 1.3em;
 
 $bezelHeight: 1.3em;
 $bezelBgColor: #DDDBDD;
-$editorBgColor: #282C34;
 $navTabFontColor: #D7DAE0;
-$navTabBgColor: #21252B;
 $asideNumColor: #4B5364;
 $editorActiveLn: #2C323C;
