--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./components/_btns.scss";
 @import "./components/_bezel.scss";
 @import "./components/_nav.scss";
+@import "./components/_editor.scss";
 @import "./layout/_layout.scss";
 
 // .nav-tab {
