--- a/sass/scss/components/_bezel.scss
+++ b/sass/scss/components/_bezel.scss
@@ -2,6 +2,6 @@
   background-color: $bezelBgColor;
   border-radius: 10px 10px 0px 0px;
   padding: 3px;
-  margin: $marginBaseComponent;
+  margin: 1.5rem 1.5rem 0px 1.5rem;
 
 }
