--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./components/_bezel.scss";
 @import "./components/_nav.scss";
 @import "./components/_editor.scss";
+@import "./components/_footer.scss";
 @import "./layout/_layout.scss";
 
 // .nav-tab {
