--- a/sass/scss/base/_base.scss
+++ b/sass/scss/base/_base.scss
@@ -15,11 +15,6 @@ body {
   /* Font */
   font-family: sans-serif;
   font-weight: normal;
-  // background-color: #f6f8f9;
-
-  /* Color */
-
-  /* Dimensions */
-  // box-sizing: border-box;
+  background-color: #f6f8f9;
 
 }
