Refactor: Make var name more applicable

--- a/src/sass/scss/components/_nav.scss
+++ b/src/sass/scss/components/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
   margin: $marginBaseComponent;
-  background-color: $colorEditorNavBg;
+  background-color: $colorNavBg;
   color: #fff;
 
 
