--- a/src/sass/scss/vars/_vars.scss
+++ b/src/sass/scss/vars/_vars.scss
@@ -6,7 +6,7 @@
 $colorPrimary: #34C84A;
 $colorSecondary: #FDBC40;
 $colorCaution: #FC635D;
-$colorEditorNavBg: #21252B;
+$colorNavBg: #21252B;
 $colorEditorBg: #282C34;
 $colorEditorNum: #4B5364;
 $colorEditorBlinker: #528BFF;
