--- a/src/sass/scss/components/_footer.scss
+++ b/src/sass/scss/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $colorEditorNavBg;
+  background-color: $colorNavBg;
   height: 1rem;
   margin: 0 1.5rem;
   border-radius: 0 0 10px 10px;
