--- a/src/sass/scss/vars/_vars.scss
+++ b/src/sass/scss/vars/_vars.scss
@@ -26,7 +26,7 @@ $baseFontSize: 20px;
 
 
 /**************************/
-/*** Bezzel ***/
+/*** Bezel ***/
 /**************************/
 
 $bezelHeight: 1.3em;
