--- a/src/sass/css/main.css
+++ b/src/sass/css/main.css
@@ -5,7 +5,7 @@
 /* Dimension */
 /* Font */
 /**************************/
-/*** Bezzel ***/
+/*** Bezel ***/
 /**************************/
 * {
   /* Dimensions */
