--- a/src/sass/scss/components/_bezel.scss
+++ b/src/sass/scss/components/_bezel.scss
@@ -1,5 +1,5 @@
 .bezel {
-  background-color: $bezelBgColor;
+  background-color: $colorBezelBg;
   border-radius: 10px 10px 0px 0px;
   padding: 3px;
   margin: 1.5rem 1.5rem 0px 1.5rem;
