--- a/src/sass/scss/main.scss
+++ b/src/sass/scss/main.scss
@@ -1,4 +1,5 @@
 @import "./vars/_vars.scss";
+@import "./mixins/_nav.scss";
 @import "./base/_base.scss";
 @import "./components/_btns.scss";
 @import "./components/_bezel.scss";
@@ -6,3 +7,4 @@
 @import "./components/_editor.scss";
 @import "./components/_footer.scss";
 @import "./layout/_layout.scss";
+@import "./lesson_nav/components/_nav.scss";
