Styles: Improve font color to match dark theme

--- a/src/sass/css/main.css
+++ b/src/sass/css/main.css
@@ -120,7 +120,7 @@ body {
   border-radius: .5rem; }
 
 .lessons_nav__title {
-  color: #b3b3b3;
+  color: #E5F0FB;
   font-size: 20px;
   text-align: center;
   padding: .3rem; }
@@ -132,6 +132,6 @@ body {
   padding: .5rem; }
 
 .lessons_nav__lesson__title {
-  color: #999999; }
+  color: #d8e8f9; }
 
 /*# sourceMappingURL=main.css.map */
