--- a/src/sass/scss/vars/_vars.scss
+++ b/src/sass/scss/vars/_vars.scss
@@ -7,6 +7,7 @@ $colorPrimary: #34C84A;
 $colorSecondary: #FDBC40;
 $colorCaution: #FC635D;
 $colorNavBg: #21252B;
+$colorBaseFont: #E5F0FB;
 $colorEditorBg: #282C34;
 $colorEditorNum: #4B5364;
 $colorEditorBlinker: #528BFF;
