Refactor: Display three main components in row layout

--- a/src/sass/scss/lesson_nav/components/_nav.scss
+++ b/src/sass/scss/lesson_nav/components/_nav.scss
@@ -1,7 +1,8 @@
 .lessons_nav {
   @include nav;
-  width: 20%;
   border-radius: .5rem;
+  margin: $marginComponentContainer;
+  min-width: 20%;
 
 }
 
