--- a/src/sass/scss/main.scss
+++ b/src/sass/scss/main.scss
@@ -1,10 +1,11 @@
-@import "./vars/_vars.scss";
-@import "./mixins/_nav.scss";
-@import "./base/_base.scss";
-@import "./components/_btns.scss";
-@import "./components/_bezel.scss";
-@import "./components/_nav.scss";
-@import "./components/_editor.scss";
-@import "./components/_footer.scss";
-@import "./layout/_layout.scss";
-@import "./lesson_nav/components/_nav.scss";
+@import "vars/vars";
+@import "./mixins/_nav";
+@import "./base/_base";
+@import "partials/btns";
+@import "partials/bezel";
+@import "interfaces/atom/nav";
+@import "interfaces/atom/editor";
+@import "interfaces/atom/footer";
+@import "partials/interface";
+@import "./layout/_layout";
+@import "./lesson_nav/components/_nav";
