--- a/src/sass/scss/vars/_vars.scss
+++ b/src/sass/scss/vars/_vars.scss
@@ -19,6 +19,7 @@ $colorDarkThemeLight: lighten($colorEditorBg, 10%);
 /* Dimension */
 $marginBaseBody: 0;
 $marginBaseComponent: 0 1.5rem;
+$marginComponentContainer: 1.5rem 1.5rem 0px 1.5rem;
 $paddingBaseBody: 0;
 
 /* Font */
