--- a/src/sass/css/main.css
+++ b/src/sass/css/main.css
@@ -98,6 +98,13 @@ body {
   border-radius: 0 0 10px 10px;
   border-top: 1px solid #181A1F; }
 
+.interface {
+  min-width: 35rem; }
+
+body {
+  display: flex;
+  justify-content: space-between; }
+
 .bezel {
   display: flex;
   justify-content: flex-start;
@@ -116,8 +123,9 @@ body {
   margin: 0 1.5rem;
   background-color: #21252B;
   color: #fff;
-  width: 20%;
-  border-radius: .5rem; }
+  border-radius: .5rem;
+  margin: 1.5rem 1.5rem 0px 1.5rem;
+  min-width: 20%; }
 
 .lessons_nav__title {
   color: #E5F0FB;
