--- a/src/sass/scss/partials/_bezel.scss
+++ b/src/sass/scss/partials/_bezel.scss
@@ -2,6 +2,7 @@
   background-color: $colorBezelBg;
   border-radius: 10px 10px 0px 0px;
   padding: 3px;
-  margin: 1.5rem 1.5rem 0px 1.5rem;
+  //margin: 1.5rem 1.5rem 0px 1.5rem;
+  margin: $marginComponentContainer;
 
 }
