--- a/src/sass/scss/interfaces/atom/_editor.scss
+++ b/src/sass/scss/interfaces/atom/_editor.scss
@@ -1,5 +1,5 @@
 .editor {
-  margin: $marginBaseComponent;
+  //margin: $marginBaseComponent;
   background-color: $colorEditorBg;
   color: $colorEditorNum;
   padding: 0 1.5rem;
