--- a/src/sass/scss/layout/_layout.scss
+++ b/src/sass/scss/layout/_layout.scss
@@ -1,7 +1,9 @@
 .game {
   display: flex;
-  justify-content: space-between;
+  //justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
+  //align-items: center;
 
 }
 
