--- a/src/sass/scss/base/_base.scss
+++ b/src/sass/scss/base/_base.scss
@@ -15,6 +15,8 @@ body {
   /* Font */
   font-family: sans-serif;
   font-weight: normal;
-  background-color: #f6f8f9;
+  //background-color: #f6f8f9;
+  //background-color: #161C34;
+  background-color: #242A36;
 
 }
