--- a/src/sass/scss/interfaces/atom/_footer.scss
+++ b/src/sass/scss/interfaces/atom/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: $colorNavBg;
   height: 1rem;
-  margin: 0 1.5rem;
+  //margin: 0 1.5rem;
   border-radius: 0 0 10px 10px;
   border-top: 1px solid #181A1F;
 
