--- a/src/sass/scss/mixins/_nav.scss
+++ b/src/sass/scss/mixins/_nav.scss
@@ -1,5 +1,5 @@
 @mixin nav {
-  margin: $marginBaseComponent;
+  //margin: $marginBaseComponent;
   background-color: $colorNavBg;
   color: #fff;
 
