--- a/src/sass/scss/partials/_bezel.scss
+++ b/src/sass/scss/partials/_bezel.scss
@@ -3,6 +3,6 @@
   border-radius: 10px 10px 0px 0px;
   padding: 3px;
   //margin: 1.5rem 1.5rem 0px 1.5rem;
-  margin: $marginComponentContainer;
+  //margin: $marginComponentContainer;
 
 }
