--- a/src/sass/scss/base/_base.scss
+++ b/src/sass/scss/base/_base.scss
@@ -17,6 +17,8 @@ body {
   font-weight: normal;
   //background-color: #f6f8f9;
   //background-color: #161C34;
-  background-color: #242A36;
+  //background: linear-gradient(to right, #50617F, #3D485F);
+  background: linear-gradient(to left, #242A36, #3D485F);
+  //background: #242A36;
 
 }
