--- a/src/sass/scss/base/_base.scss
+++ b/src/sass/scss/base/_base.scss
@@ -18,7 +18,15 @@ body {
   //background-color: #f6f8f9;
   //background-color: #161C34;
   //background: linear-gradient(to right, #50617F, #3D485F);
-  background: linear-gradient(to left, #242A36, #3D485F);
+  background: linear-gradient(to left, #35476a, #42577c, #586f9b);
   //background: #242A36;
+
+}
+
+.gameTitle {
+  margin: 5% 15%;
+  color: white;
+  letter-spacing: .2rem;
+  font-weight: 300;
 
 }
