--- a/src/sass/scss/main.scss
+++ b/src/sass/scss/main.scss
@@ -9,3 +9,4 @@
 @import "partials/interface";
 @import "./layout/_layout";
 @import "./lesson_nav/components/_nav";
+@import "./partials/_syntax_highlight";
