--- a/src/sass/scss/main.scss
+++ b/src/sass/scss/main.scss
@@ -10,3 +10,5 @@
 @import "./layout/_layout";
 @import "./lesson_nav/components/_nav";
 @import "./partials/_syntax_highlight";
+@import "./icons/_icons";
+@import "./animation/_animation";
