--- a/src/sass/scss/lesson_nav/components/_nav.scss
+++ b/src/sass/scss/lesson_nav/components/_nav.scss
@@ -2,8 +2,9 @@
   @include nav;
   border-radius: .5rem;
   //margin: $marginComponentContainer;
-  margin: 1rem 2.5rem 0 1rem;
+  margin: 1rem 1.5rem 0 1rem;
   min-width: 18%;
+  width: 20%;
   min-height: 28.4rem;
 }
 
