--- a/src/sass/scss/partials/_interface.scss
+++ b/src/sass/scss/partials/_interface.scss
@@ -1,5 +1,6 @@
 .interface {
-  min-width: 35rem;
+  //min-width: 35rem;
+  width: 72%;
   min-height: 30rem;
   margin-top: 1rem;
   //min-height: ;
