--- a/src/sass/css/main.css
+++ b/src/sass/css/main.css
@@ -35,13 +35,13 @@ body {
   margin-top: 0;
   color: #bfbfbf;
   letter-spacing: .2rem;
-  font-weight: 300;
   font-size: 1.3rem;
   width: 100%;
   text-align: center; }
 
 .game__title {
-  transform: translateX(-50%); }
+  transform: translateX(-50%);
+  font-weight: 200; }
 
 .btn--primary {
   background-color: #FC635D; }
