feat: Add new action type for store

--- a/src/sass/css/main.css
+++ b/src/sass/css/main.css
@@ -127,7 +127,8 @@ body {
 .game__main {
   display: flex;
   flex-wrap: wrap;
-  overflow: scroll; }
+  overflow-y: scroll;
+  overflow-x: hidden; }
 
 .bezel {
   display: flex;
