--- a/src/sass/scss/vars/_vars.scss
+++ b/src/sass/scss/vars/_vars.scss
@@ -5,6 +5,8 @@
 /* Color */
 $colorPrimary: #34C84A;
 $colorSecondary: #FDBC40;
+$colorGrey: #6D747C;
+$colorDefault: #2C7DF6;
 $colorCaution: #FC635D;
 $colorNavBg: #21252B;
 $colorBaseFont: #E5F0FB;
