--- a/src/sass/scss/main.scss
+++ b/src/sass/scss/main.scss
@@ -12,3 +12,5 @@
 @import "./partials/_syntax_highlight";
 @import "./icons/_icons";
 @import "./animation/_animation";
+@import "utilities/_margin";
+@import "utilities/_padding";
