--- a/src/sass/scss/vars/_vars.scss
+++ b/src/sass/scss/vars/_vars.scss
@@ -26,9 +26,8 @@ $marginBaseBody: 0;
 $marginBaseComponent: 0 1.5rem;
 $marginComponentContainer: 1.5rem 1.5rem 0px 1.5rem;
 $paddingBaseBody: 0;
-
-/* Font */
-$fontBaseSize: 16px;
+$base: 16px;
+$baseSmall: .5rem;
 
 
 
