styles: Add modal animation

--- a/src/sass/scss/animation/_animation.scss
+++ b/src/sass/scss/animation/_animation.scss
@@ -6,6 +6,22 @@
 
 }
 
+.show-modal {
+  animation: reveal .4s ease-in-out;
+}
+
+@keyframes reveal {
+  from {
+    opacity: 0;
+    top: -1%;
+  }
+
+  to {
+    opacity: 1;
+    top: 2%;
+  }
+}
+
 @keyframes pulse {
   from {
     transform: scale(1);
