--- a/src/sass/css/main.css
+++ b/src/sass/css/main.css
@@ -241,6 +241,16 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: ease; }
 
+.show-modal {
+  animation: reveal .4s ease-in-out; }
+
+@keyframes reveal {
+  from {
+    opacity: 0;
+    top: -1%; }
+  to {
+    opacity: 1;
+    top: 2%; } }
 @keyframes pulse {
   from {
     transform: scale(1); }
@@ -305,5 +315,20 @@ body {
 
 .ps-r {
   margin-right: 0.5rem; }
+
+.modal {
+  position: absolute;
+  top: 2%;
+  left: 37.5%;
+  transform: translateX(-37.5%);
+  background-color: white;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  overflow: hidden; }
+
+.hide-modal {
+  visibility: hidden; }
 
 /*# sourceMappingURL=main.css.map */
